Fixed z-index issue on slide counter

--- a/scss/imports/_slidecounter.scss
+++ b/scss/imports/_slidecounter.scss
@@ -15,6 +15,7 @@
 			}
 		}
 		.fs-slide-counter {
+			z-index: 2;
 			@include fs-mixin-transition(opacity 200ms ease);
 		}
 		.fs-slide-counter-current {
